eurasia/eurasiacon/binary2_540_omap4430_android_debug/host/intermediates/cparser/cparser.output
State 47 conflicts: 1 shift/reduce
State 103 conflicts: 1 shift/reduce
State 107 conflicts: 1 shift/reduce
State 312 conflicts: 1 shift/reduce
State 364 conflicts: 1 shift/reduce
State 442 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: /* empty */
    2        | program extern_declaration

    3 extern_declaration: function_definition
    4                   | declaration
    5                   | ';'

    6 function_definition: declaration_specifiers declarator declaration_list compound_statement

    7 declaration_list: /* empty */
    8                 | declaration_list declaration

    9 declaration: declaration_specifiers init_declarator_list ';'

   10 declaration_specifiers: declaration_specifier
   11                       | declaration_specifier declaration_specifiers

   12 declaration_specifier: storage_class_specifier
   13                      | type_specifier
   14                      | type_qualifier
   15                      | function_specifier

   16 init_declarator_list: init_declarator
   17                     | init_declarator_list ',' init_declarator

   18 init_declarator: /* empty */
   19                | declarator
   20                | declarator '=' initializer

   21 storage_class_specifier: TYPEDEF
   22                        | EXTERN
   23                        | STATIC
   24                        | AUTO
   25                        | REGISTER

   26 type_specifier: VOID
   27               | CHAR
   28               | SHORT
   29               | INT
   30               | LONG
   31               | FLOAT
   32               | DOUBLE
   33               | MSVC__INT8
   34               | MSVC__INT16
   35               | MSVC__INT32
   36               | MSVC__INT64
   37               | SIGNED
   38               | MSVC__W64
   39               | UNSIGNED
   40               | struct_or_union_specifier
   41               | enum_specifier
   42               | TYPEDEF_NAME
   43               | GCC__BUILTIN_VA_LIST
   44               | BOOL

   45 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
   46                          | struct_or_union identifier_or_typedef_name '{' struct_declaration_list '}'
   47                          | struct_or_union declspec identifier_or_typedef_name '{' struct_declaration_list '}'
   48                          | struct_or_union identifier_or_typedef_name

   49 identifier_or_typedef_name: IDENTIFIER
   50                           | TYPEDEF_NAME

   51 struct_or_union: STRUCT
   52                | UNION

   53 struct_declaration_list: struct_declaration
   54                        | struct_declaration_list struct_declaration

   55 struct_declaration: specifier_qualifier_list struct_declarator_list_opt ';'

   56 specifier_qualifier_list_opt: /* empty */
   57                             | specifier_qualifier_list

   58 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
   59                         | type_qualifier specifier_qualifier_list_opt

   60 struct_declarator_list_opt: /* empty */
   61                           | struct_declarator_list

   62 struct_declarator_list: struct_declarator
   63                       | struct_declarator_list ',' struct_declarator

   64 struct_declarator: declarator
   65                  | declarator ':' constant_expression
   66                  | ':' constant_expression

   67 enum_specifier: ENUM '{' enumerator_list '}'
   68               | ENUM IDENTIFIER '{' enumerator_list '}'
   69               | ENUM '{' enumerator_list ',' '}'
   70               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
   71               | ENUM IDENTIFIER

   72 enumerator_list: enumerator
   73                | enumerator_list ',' enumerator

   74 enumerator: IDENTIFIER
   75           | IDENTIFIER '=' constant_expression

   76 type_qualifier: CONST
   77               | RESTRICT
   78               | VOLATILE
   79               | microsoft_modifier

   80 function_specifier: USEASM_INLINE
   81                   | __INLINE
   82                   | _INLINE
   83                   | __FORCEINLINE

   84 microsoft_modifier: MSVC__CDECL
   85                   | MSVC_CDECL
   86                   | MSVC__STDCALL
   87                   | MSVC_FASTCALL
   88                   | MSVC_PTR32
   89                   | MSVC_PTR64
   90                   | declspec

   91 declspec: MSVC__DECLSPEC '(' microsoft_declspec ')'

   92 microsoft_declspec: MSVC__DECLSPEC_ALLOCATE '(' string_literal ')'
   93                   | MSVC__DECLSPEC_DLLIMPORT
   94                   | MSVC__DECLSPEC_DLLEXPORT
   95                   | MSVC__DECLSPEC_NAKED
   96                   | MSVC__DECLSPEC_NORETURN
   97                   | MSVC__DECLSPEC_NOTHROW
   98                   | MSVC__DECLSPEC_NOVTABLE
   99                   | MSVC__DECLSPEC_PROPERTY '(' microsoft_declspec_property_list ')'
  100                   | MSVC__DECLSPEC_SELECTANY
  101                   | MSVC__DECLSPEC_THREAD
  102                   | MSVC__DECLSPEC_UUID '(' string_literal ')'
  103                   | MSVC__DECLSPEC_ALIGN '(' assignment_expression ')'
  104                   | MSVC__DECLSPEC_DEPRECATED
  105                   | MSVC__DECLSPEC_DEPRECATED '(' string_literal ')'
  106                   | MSVC__DECLSPEC_RESTRICT
  107                   | MSVC__DECLSPEC_NOALIAS

  108 microsoft_declspec_property_list: microsoft_declspec_property
  109                                 | microsoft_declspec_property_list microsoft_declspec_property

  110 microsoft_declspec_property: MSVC__DECLSPEC_PROPERTY_PUT '=' IDENTIFIER
  111                            | MSVC__DECLSPEC_PROPERTY_GET '=' IDENTIFIER

  112 declarator: pointer_opt direct_declarator attribute_opt

  113 gcc_attribute: GCC__ATTRIBUTE__ '(' '(' attribute_specifier_list ')' ')'

  114 gcc_attribute_list: gcc_attribute
  115                   | gcc_attribute gcc_attribute_list

  116 attribute_opt: /* empty */
  117              | gcc_attribute_list

  118 attribute_specifier_list: attribute_specifier
  119                         | attribute_specifier_list attribute_specifier

  120 attribute_specifier: IDENTIFIER
  121                    | IDENTIFIER '(' IDENTIFIER attribute_specifier_parameter_list_opt ')'

  122 attribute_specifier_parameter_list_opt: /* empty */
  123                                       | ',' attribute_specifier_parameter_list

  124 attribute_specifier_parameter_list: assignment_expression
  125                                   | attribute_specifier_parameter_list ',' assignment_expression

  126 direct_declarator: IDENTIFIER
  127                  | TYPEDEF_NAME
  128                  | '(' type_qualifier_list_opt declarator ')'
  129                  | direct_declarator '[' ']'
  130                  | direct_declarator '[' assignment_expression ']'
  131                  | direct_declarator '[' '*' ']'
  132                  | direct_declarator '(' parameter_type_list ')'
  133                  | direct_declarator '(' ')'
  134                  | direct_declarator '(' identifier_list ')'

  135 pointer_opt: /* empty */
  136            | pointer

  137 pointer: '*' type_qualifier_list_opt
  138        | '*' type_qualifier_list_opt pointer

  139 type_qualifier_list_opt: /* empty */
  140                        | type_qualifier_list

  141 type_qualifier_list: type_qualifier
  142                    | type_qualifier_list type_qualifier

  143 parameter_type_list_opt: /* empty */
  144                        | parameter_type_list

  145 parameter_type_list: parameter_list
  146                    | parameter_list ',' '.' '.' '.'

  147 parameter_list: parameter_declaration
  148               | parameter_list ',' parameter_declaration

  149 parameter_declaration: declaration_specifiers declarator
  150                      | declaration_specifiers abstract_declarator_opt

  151 identifier_list: IDENTIFIER
  152                | identifier_list ',' IDENTIFIER

  153 type_name: specifier_qualifier_list abstract_declarator_opt

  154 abstract_declarator_opt: /* empty */
  155                        | abstract_declarator

  156 abstract_declarator: pointer
  157                    | pointer_opt direct_abstract_declarator

  158 direct_abstract_declaractor_array_size: /* empty */
  159                                       | '*'
  160                                       | assignment_expression

  161 direct_abstract_declarator: '(' type_qualifier_list_opt abstract_declarator ')'
  162                           | direct_abstract_declarator_opt '[' direct_abstract_declaractor_array_size ']'
  163                           | direct_abstract_declarator_opt '(' parameter_type_list_opt ')'

  164 direct_abstract_declarator_opt: /* empty */
  165                               | direct_abstract_declarator

  166 initializer: assignment_expression
  167            | '{' initializer_list '}'
  168            | '{' initializer_list ',' '}'

  169 initializer_list: designation_opt initializer
  170                 | initializer_list ',' designation_opt initializer

  171 designation_opt: /* empty */
  172                | designation

  173 designation: designator_list '='

  174 designator_list: designator
  175                | designator_list designator

  176 designator: '[' constant_expression ']' '.' IDENTIFIER

  177 statement: labeled_statement
  178          | compound_statement
  179          | expression_statement
  180          | selection_statement
  181          | iteration_statement
  182          | jump_statement

  183 labeled_statement: IDENTIFIER ':' statement
  184                  | CASE constant_expression ':' statement
  185                  | DEFAULT ':' statement

  186 compound_statement: '{' block_item_list_opt '}'

  187 block_item_list_opt: /* empty */
  188                    | block_item_list

  189 block_item_list: block_item
  190                | block_item_list block_item

  191 block_item: declaration
  192           | statement

  193 expression_statement: ';'
  194                     | expression ';'

  195 selection_statement: IF '(' expression ')' statement
  196                    | IF '(' expression ')' statement ELSE statement
  197                    | SWITCH '(' expression ')' statement

  198 iteration_statement: WHILE '(' expression ')' statement
  199                    | DO statement WHILE '(' expression ')' ';'
  200                    | FOR '(' expression_opt ';' expression_opt ';' expression_opt ')' statement
  201                    | FOR '(' declaration expression_opt ';' expression_opt ')' statement
  202                    | __ASM

  203 jump_statement: GOTO IDENTIFIER ';'
  204               | CONTINUE ';'
  205               | BREAK ';'
  206               | RETURN expression_opt ';'

  207 primary_expression: IDENTIFIER
  208                   | INTEGER_NUMBER
  209                   | FLOAT_NUMBER
  210                   | string_literal
  211                   | '(' expression ')'

  212 postfix_expression: primary_expression
  213                   | postfix_expression '[' expression ']'
  214                   | postfix_expression '(' argument_expression_list_opt ')'
  215                   | postfix_expression '.' identifier_or_typedef_name
  216                   | postfix_expression STRUCTPTRACCESS identifier_or_typedef_name
  217                   | postfix_expression INCREMENT
  218                   | postfix_expression DECREMENT
  219                   | '(' type_name ')' '{' initializer_list '}'
  220                   | '(' type_name ')' '{' initializer_list ',' '}'

  221 argument_expression_list_opt: /* empty */
  222                             | argument_expression_list

  223 argument_expression_list: assignment_expression
  224                         | argument_expression_list ',' assignment_expression

  225 unary_expression: postfix_expression
  226                 | INCREMENT unary_expression
  227                 | DECREMENT unary_expression
  228                 | unary_operator cast_expression
  229                 | SIZEOF unary_expression
  230                 | SIZEOF '(' type_name ')'

  231 unary_operator: '&'
  232               | '*'
  233               | '+'
  234               | '-'
  235               | '~'
  236               | '!'

  237 cast_expression: unary_expression
  238                | '(' type_name ')' cast_expression

  239 multiplicative_expression: cast_expression
  240                          | multiplicative_expression '*' cast_expression
  241                          | multiplicative_expression '/' cast_expression
  242                          | multiplicative_expression '%' cast_expression

  243 additive_expression: multiplicative_expression
  244                    | additive_expression '+' multiplicative_expression
  245                    | additive_expression '-' multiplicative_expression

  246 shift_expression: additive_expression
  247                 | shift_expression LEFTSHIFT additive_expression
  248                 | shift_expression RIGHTSHIFT additive_expression

  249 relational_expression: shift_expression
  250                      | relational_expression '<' shift_expression
  251                      | relational_expression '>' shift_expression
  252                      | relational_expression LESSTHANOREQUAL shift_expression
  253                      | relational_expression GREATERTHANOREQUAL shift_expression

  254 equality_expression: relational_expression
  255                    | equality_expression EQUALITY relational_expression
  256                    | equality_expression NOTEQUAL relational_expression

  257 and_expression: equality_expression
  258               | and_expression '&' equality_expression

  259 exclusive_or_expression: and_expression
  260                        | exclusive_or_expression '^' and_expression

  261 inclusive_or_expression: exclusive_or_expression
  262                        | inclusive_or_expression '|' exclusive_or_expression

  263 logical_and_expression: inclusive_or_expression
  264                       | logical_and_expression LOGICALAND inclusive_or_expression

  265 logical_or_expression: logical_and_expression
  266                      | logical_or_expression LOGICALOR logical_and_expression

  267 conditional_expression: logical_or_expression
  268                       | logical_or_expression '?' expression ':' conditional_expression

  269 assignment_expression: conditional_expression
  270                      | unary_expression assignment_operator assignment_expression

  271 assignment_operator: '='
  272                    | MULTIPLYASSIGNMENT
  273                    | DIVIDEASSIGNMENT
  274                    | MODULUSASSIGNMENT
  275                    | ADDASSIGNMENT
  276                    | SUBASSIGNMENT
  277                    | SHIFTLEFTASSIGNMENT
  278                    | SHIFTRIGHTASSIGNMENT
  279                    | BITWISEANDASSIGNMENT
  280                    | BITWISEXORASSIGNMENT
  281                    | BITWISEORASSIGNMENT

  282 expression: assignment_expression
  283           | expression ',' assignment_expression

  284 expression_opt: /* empty */
  285               | expression

  286 constant_expression: conditional_expression

  287 string_literal: STRING_LITERAL
  288               | string_literal STRING_LITERAL


Terminals, with rules where they appear

$end (0) 0
'!' (33) 236
'%' (37) 242
'&' (38) 231 258
'(' (40) 91 92 99 102 103 105 113 121 128 132 133 134 161 163 195 196
    197 198 199 200 201 211 214 219 220 230 238
')' (41) 91 92 99 102 103 105 113 121 128 132 133 134 161 163 195 196
    197 198 199 200 201 211 214 219 220 230 238
'*' (42) 131 137 138 159 232 240
'+' (43) 233 244
',' (44) 17 63 69 70 73 123 125 146 148 152 168 170 220 224 283
'-' (45) 234 245
'.' (46) 146 176 215
'/' (47) 241
':' (58) 65 66 183 184 185 268
';' (59) 5 9 55 193 194 199 200 201 203 204 205 206
'<' (60) 250
'=' (61) 20 75 110 111 173 271
'>' (62) 251
'?' (63) 268
'[' (91) 129 130 131 162 176 213
']' (93) 129 130 131 162 176 213
'^' (94) 260
'{' (123) 45 46 47 67 68 69 70 167 168 186 219 220
'|' (124) 262
'}' (125) 45 46 47 67 68 69 70 167 168 186 219 220
'~' (126) 235
error (256)
SWITCH (258) 197
SIGNED (259) 37
MSVC__W64 (260) 38
VOID (261) 26
SIZEOF (262) 229 230
WHILE (263) 198 199
UNSIGNED (264) 39
DO (265) 199
EXTERN (266) 22
DOUBLE (267) 32
VOLATILE (268) 78
MSVC_PTR32 (269) 88
MSVC_PTR64 (270) 89
STATIC (271) 23
ENUM (272) 67 68 69 70 71
CONST (273) 76
AUTO (274) 24
UNION (275) 52
FLOAT (276) 31
RESTRICT (277) 77
RETURN (278) 206
TYPEDEF (279) 21
IF (280) 195 196
CONTINUE (281) 204
CHAR (282) 27
DEFAULT (283) 185
USEASM_INLINE (284) 80
CASE (285) 184
STRUCT (286) 51
BREAK (287) 205
SHORT (288) 28
INT (289) 29
LONG (290) 30
FOR (291) 200 201
ELSE (292) 196
GOTO (293) 203
REGISTER (294) 25
STRING_LITERAL (295) 287 288
INTEGER_NUMBER (296) 208
IDENTIFIER (297) 49 68 70 71 74 75 110 111 120 121 126 151 152 176
    183 203 207
FLOAT_NUMBER (298) 209
TYPEDEF_NAME (299) 42 50 127
MSVC__INT8 (300) 33
MSVC__INT16 (301) 34
MSVC__INT32 (302) 35
MSVC__INT64 (303) 36
INCREMENT (304) 217 226
DECREMENT (305) 218 227
STRUCTPTRACCESS (306) 216
MULTIPLYASSIGNMENT (307) 272
DIVIDEASSIGNMENT (308) 273
MODULUSASSIGNMENT (309) 274
ADDASSIGNMENT (310) 275
SUBASSIGNMENT (311) 276
SHIFTLEFTASSIGNMENT (312) 277
SHIFTRIGHTASSIGNMENT (313) 278
BITWISEANDASSIGNMENT (314) 279
BITWISEXORASSIGNMENT (315) 280
BITWISEORASSIGNMENT (316) 281
LOGICALOR (317) 266
LOGICALAND (318) 264
LEFTSHIFT (319) 247
RIGHTSHIFT (320) 248
EQUALITY (321) 255
LESSTHANOREQUAL (322) 252
GREATERTHANOREQUAL (323) 253
NOTEQUAL (324) 256
MSVC__CDECL (325) 84
MSVC__STDCALL (326) 86
__INLINE (327) 81
__FORCEINLINE (328) 83
MSVC_FASTCALL (329) 87
__ASM (330) 202
_INLINE (331) 82
MSVC__DECLSPEC (332) 91
MSVC__DECLSPEC_ALLOCATE (333) 92
MSVC__DECLSPEC_DLLIMPORT (334) 93
MSVC__DECLSPEC_DLLEXPORT (335) 94
MSVC__DECLSPEC_NAKED (336) 95
MSVC__DECLSPEC_NORETURN (337) 96
MSVC__DECLSPEC_NOTHROW (338) 97
MSVC__DECLSPEC_NOVTABLE (339) 98
MSVC__DECLSPEC_PROPERTY (340) 99
MSVC__DECLSPEC_SELECTANY (341) 100
MSVC__DECLSPEC_THREAD (342) 101
MSVC__DECLSPEC_UUID (343) 102
MSVC__DECLSPEC_PROPERTY_GET (344) 111
MSVC__DECLSPEC_PROPERTY_PUT (345) 110
MSVC__DECLSPEC_ALIGN (346) 103
MSVC__DECLSPEC_DEPRECATED (347) 104 105
MSVC__DECLSPEC_RESTRICT (348) 106
MSVC__DECLSPEC_NOALIAS (349) 107
MSVC_CDECL (350) 85
GCC__ATTRIBUTE__ (351) 113
GCC__BUILTIN_VA_LIST (352) 43
BOOL (353) 44


Nonterminals, with rules where they appear

$accept (123)
    on left: 0
program (124)
    on left: 1 2, on right: 0 2
extern_declaration (125)
    on left: 3 4 5, on right: 2
function_definition (126)
    on left: 6, on right: 3
declaration_list (127)
    on left: 7 8, on right: 6 8
declaration (128)
    on left: 9, on right: 4 8 191 201
declaration_specifiers (129)
    on left: 10 11, on right: 6 9 11 149 150
declaration_specifier (130)
    on left: 12 13 14 15, on right: 10 11
init_declarator_list (131)
    on left: 16 17, on right: 9 17
init_declarator (132)
    on left: 18 19 20, on right: 16 17
storage_class_specifier (133)
    on left: 21 22 23 24 25, on right: 12
type_specifier (134)
    on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
    44, on right: 13 58
struct_or_union_specifier (135)
    on left: 45 46 47 48, on right: 40
identifier_or_typedef_name (136)
    on left: 49 50, on right: 46 47 48 215 216
struct_or_union (137)
    on left: 51 52, on right: 45 46 47 48
struct_declaration_list (138)
    on left: 53 54, on right: 45 46 47 54
struct_declaration (139)
    on left: 55, on right: 53 54
specifier_qualifier_list_opt (140)
    on left: 56 57, on right: 58 59
specifier_qualifier_list (141)
    on left: 58 59, on right: 55 57 153
struct_declarator_list_opt (142)
    on left: 60 61, on right: 55
struct_declarator_list (143)
    on left: 62 63, on right: 61 63
struct_declarator (144)
    on left: 64 65 66, on right: 62 63
enum_specifier (145)
    on left: 67 68 69 70 71, on right: 41
enumerator_list (146)
    on left: 72 73, on right: 67 68 69 70 73
enumerator (147)
    on left: 74 75, on right: 72 73
type_qualifier (148)
    on left: 76 77 78 79, on right: 14 59 141 142
function_specifier (149)
    on left: 80 81 82 83, on right: 15
microsoft_modifier (150)
    on left: 84 85 86 87 88 89 90, on right: 79
declspec (151)
    on left: 91, on right: 47 90
microsoft_declspec (152)
    on left: 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107,
    on right: 91
microsoft_declspec_property_list (153)
    on left: 108 109, on right: 99 109
microsoft_declspec_property (154)
    on left: 110 111, on right: 108 109
declarator (155)
    on left: 112, on right: 6 19 20 64 65 128 149
gcc_attribute (156)
    on left: 113, on right: 114 115
gcc_attribute_list (157)
    on left: 114 115, on right: 115 117
attribute_opt (158)
    on left: 116 117, on right: 112
attribute_specifier_list (159)
    on left: 118 119, on right: 113 119
attribute_specifier (160)
    on left: 120 121, on right: 118 119
attribute_specifier_parameter_list_opt (161)
    on left: 122 123, on right: 121
attribute_specifier_parameter_list (162)
    on left: 124 125, on right: 123 125
direct_declarator (163)
    on left: 126 127 128 129 130 131 132 133 134, on right: 112 129
    130 131 132 133 134
pointer_opt (164)
    on left: 135 136, on right: 112 157
pointer (165)
    on left: 137 138, on right: 136 138 156
type_qualifier_list_opt (166)
    on left: 139 140, on right: 128 137 138 161
type_qualifier_list (167)
    on left: 141 142, on right: 140 142
parameter_type_list_opt (168)
    on left: 143 144, on right: 163
parameter_type_list (169)
    on left: 145 146, on right: 132 144
parameter_list (170)
    on left: 147 148, on right: 145 146 148
parameter_declaration (171)
    on left: 149 150, on right: 147 148
identifier_list (172)
    on left: 151 152, on right: 134 152
type_name (173)
    on left: 153, on right: 219 220 230 238
abstract_declarator_opt (174)
    on left: 154 155, on right: 150 153
abstract_declarator (175)
    on left: 156 157, on right: 155 161
direct_abstract_declaractor_array_size (176)
    on left: 158 159 160, on right: 162
direct_abstract_declarator (177)
    on left: 161 162 163, on right: 157 165
direct_abstract_declarator_opt (178)
    on left: 164 165, on right: 162 163
initializer (179)
    on left: 166 167 168, on right: 20 169 170
initializer_list (180)
    on left: 169 170, on right: 167 168 170 219 220
designation_opt (181)
    on left: 171 172, on right: 169 170
designation (182)
    on left: 173, on right: 172
designator_list (183)
    on left: 174 175, on right: 173 175
designator (184)
    on left: 176, on right: 174 175
statement (185)
    on left: 177 178 179 180 181 182, on right: 183 184 185 192 195
    196 197 198 199 200 201
labeled_statement (186)
    on left: 183 184 185, on right: 177
compound_statement (187)
    on left: 186, on right: 6 178
block_item_list_opt (188)
    on left: 187 188, on right: 186
block_item_list (189)
    on left: 189 190, on right: 188 190
block_item (190)
    on left: 191 192, on right: 189 190
expression_statement (191)
    on left: 193 194, on right: 179
selection_statement (192)
    on left: 195 196 197, on right: 180
iteration_statement (193)
    on left: 198 199 200 201 202, on right: 181
jump_statement (194)
    on left: 203 204 205 206, on right: 182
primary_expression (195)
    on left: 207 208 209 210 211, on right: 212
postfix_expression (196)
    on left: 212 213 214 215 216 217 218 219 220, on right: 213 214
    215 216 217 218 225
argument_expression_list_opt (197)
    on left: 221 222, on right: 214
argument_expression_list (198)
    on left: 223 224, on right: 222 224
unary_expression (199)
    on left: 225 226 227 228 229 230, on right: 226 227 229 237 270
unary_operator (200)
    on left: 231 232 233 234 235 236, on right: 228
cast_expression (201)
    on left: 237 238, on right: 228 238 239 240 241 242
multiplicative_expression (202)
    on left: 239 240 241 242, on right: 240 241 242 243 244 245
additive_expression (203)
    on left: 243 244 245, on right: 244 245 246 247 248
shift_expression (204)
    on left: 246 247 248, on right: 247 248 249 250 251 252 253
relational_expression (205)
    on left: 249 250 251 252 253, on right: 250 251 252 253 254 255
    256
equality_expression (206)
    on left: 254 255 256, on right: 255 256 257 258
and_expression (207)
    on left: 257 258, on right: 258 259 260
exclusive_or_expression (208)
    on left: 259 260, on right: 260 261 262
inclusive_or_expression (209)
    on left: 261 262, on right: 262 263 264
logical_and_expression (210)
    on left: 263 264, on right: 264 265 266
logical_or_expression (211)
    on left: 265 266, on right: 266 267 268
conditional_expression (212)
    on left: 267 268, on right: 268 269 286
assignment_expression (213)
    on left: 269 270, on right: 103 124 125 130 160 166 223 224 270
    282 283
assignment_operator (214)
    on left: 271 272 273 274 275 276 277 278 279 280 281, on right:
    270
expression (215)
    on left: 282 283, on right: 194 195 196 197 198 199 211 213 268
    283 285
expression_opt (216)
    on left: 284 285, on right: 200 201 206
constant_expression (217)
    on left: 286, on right: 65 66 75 176 184
string_literal (218)
    on left: 287 288, on right: 92 102 105 210 288


state 0

    0 $accept: . program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


state 1

    0 $accept: program . $end
    2 program: program . extern_declaration

    $end                  shift, and go to state 2
    SIGNED                shift, and go to state 3
    MSVC__W64             shift, and go to state 4
    VOID                  shift, and go to state 5
    UNSIGNED              shift, and go to state 6
    EXTERN                shift, and go to state 7
    DOUBLE                shift, and go to state 8
    VOLATILE              shift, and go to state 9
    MSVC_PTR32            shift, and go to state 10
    MSVC_PTR64            shift, and go to state 11
    STATIC                shift, and go to state 12
    ENUM                  shift, and go to state 13
    CONST                 shift, and go to state 14
    AUTO                  shift, and go to state 15
    UNION                 shift, and go to state 16
    FLOAT                 shift, and go to state 17
    RESTRICT              shift, and go to state 18
    TYPEDEF               shift, and go to state 19
    CHAR                  shift, and go to state 20
    USEASM_INLINE         shift, and go to state 21
    STRUCT                shift, and go to state 22
    SHORT                 shift, and go to state 23
    INT                   shift, and go to state 24
    LONG                  shift, and go to state 25
    REGISTER              shift, and go to state 26
    TYPEDEF_NAME          shift, and go to state 27
    MSVC__INT8            shift, and go to state 28
    MSVC__INT16           shift, and go to state 29
    MSVC__INT32           shift, and go to state 30
    MSVC__INT64           shift, and go to state 31
    MSVC__CDECL           shift, and go to state 32
    MSVC__STDCALL         shift, and go to state 33
    __INLINE              shift, and go to state 34
    __FORCEINLINE         shift, and go to state 35
    MSVC_FASTCALL         shift, and go to state 36
    _INLINE               shift, and go to state 37
    MSVC__DECLSPEC        shift, and go to state 38
    MSVC_CDECL            shift, and go to state 39
    GCC__BUILTIN_VA_LIST  shift, and go to state 40
    BOOL                  shift, and go to state 41
    ';'                   shift, and go to state 42

    extern_declaration         go to state 43
    function_definition        go to state 44
    declaration                go to state 45
    declaration_specifiers     go to state 46
    declaration_specifier      go to state 47
    storage_class_specifier    go to state 48
    type_specifier             go to state 49
    struct_or_union_specifier  go to state 50
    struct_or_union            go to state 51
    enum_specifier             go to state 52
    type_qualifier             go to state 53
    function_specifier         go to state 54
    microsoft_modifier         go to state 55
    declspec                   go to state 56


state 2

    0 $accept: program $end .

    $default  accept


state 3

   37 type_specifier: SIGNED .

    $default  reduce using rule 37 (type_specifier)


state 4

   38 type_specifier: MSVC__W64 .

    $default  reduce using rule 38 (type_specifier)


state 5

   26 type_specifier: VOID .

    $default  reduce using rule 26 (type_specifier)


state 6

   39 type_specifier: UNSIGNED .

    $default  reduce using rule 39 (type_specifier)


state 7

   22 storage_class_specifier: EXTERN .

    $default  reduce using rule 22 (storage_class_specifier)


state 8

   32 type_specifier: DOUBLE .

    $default  reduce using rule 32 (type_specifier)


state 9

   78 type_qualifier: VOLATILE .

    $default  reduce using rule 78 (type_qualifier)


state 10

   88 microsoft_modifier: MSVC_PTR32 .

    $default  reduce using rule 88 (microsoft_modifier)


state 11

   89 microsoft_modifier: MSVC_PTR64 .

    $default  reduce using rule 89 (microsoft_modifier)


state 12

   23 storage_class_specifier: STATIC .

    $default  reduce using rule 23 (storage_class_specifier)


state 13

   67 enum_specifier: ENUM . '{' enumerator_list '}'
   68               | ENUM . IDENTIFIER '{' enumerator_list '}'
   69               | ENUM . '{' enumerator_list ',' '}'
   70               | ENUM . IDENTIFIER '{' enumerator_list ',' '}'
   71               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 57
    '{'         shift, and go to state 58


state 14

   76 type_qualifier: CONST .

    $default  reduce using rule 76 (type_qualifier)


state 15

   24 storage_class_specifier: AUTO .

    $default  reduce using rule 24 (storage_class_specifier)


state 16

   52 struct_or_union: UNION .

    $default  reduce using rule 52 (struct_or_union)


state 17

   31 type_specifier: FLOAT .

    $default  reduce using rule 31 (type_specifier)


state 18

   77 type_qualifier: RESTRICT .

    $default  reduce using rule 77 (type_qualifier)


state 19

   21 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 21 (storage_class_specifier)


state 20

   27 type_specifier: CHAR .

    $default  reduce using rule 27 (type_specifier)


state 21

   80 function_specifier: USEASM_INLINE .

    $default  reduce using rule 80 (function_specifier)


state 22

   51 struct_or_union: STRUCT .

    $default  reduce using rule 51 (struct_or_union)


state 23

   28 type_specifier: SHORT .

    $default  reduce using rule 28 (type_specifier)


state 24

   29 type_specifier: INT .

    $default  reduce using rule 29 (type_specifier)


state 25

   30 type_specifier: LONG .

    $default  reduce using rule 30 (type_specifier)


state 26

   25 storage_class_specifier: REGISTER .

    $default  reduce using rule 25 (storage_class_specifier)


state 27

   42 type_specifier: TYPEDEF_NAME .

    $default  reduce using rule 42 (type_specifier)


state 28

   33 type_specifier: MSVC__INT8 .

    $default  reduce using rule 33 (type_specifier)


state 29

   34 type_specifier: MSVC__INT16 .

    $default  reduce using rule 34 (type_specifier)


state 30

   35 type_specifier: MSVC__INT32 .

    $default  reduce using rule 35 (type_specifier)


state 31

   36 type_specifier: MSVC__INT64 .

    $default  reduce using rule 36 (type_specifier)


state 32

   84 microsoft_modifier: MSVC__CDECL .

    $default  reduce using rule 84 (microsoft_modifier)


state 33

   86 microsoft_modifier: MSVC__STDCALL .

    $default  reduce using rule 86 (microsoft_modifier)


state 34

   81 function_specifier: __INLINE .

    $default  reduce using rule 81 (function_specifier)


state 35

   83 function_specifier: __FORCEINLINE .

    $default  reduce using rule 83 (function_specifier)


state 36

   87 microsoft_modifier: MSVC_FASTCALL .

    $default  reduce using rule 87 (microsoft_modifier)


state 37

   82 function_specifier: _INLINE .

    $default  reduce using rule 82 (function_specifier)


state 38

   91 declspec: MSVC__DECLSPEC . '(' microsoft_declspec ')'

    '('  shift, and go to state 59


state 39

   85 microsoft_modifier: MSVC_CDECL .

    $default  reduce using rule 85 (microsoft_modifier)


state 40

   43 type_specifier: GCC__BUILTIN_VA_LIST .

    $default  reduce using rule 43 (type_specifier)


state 41

   44 type_specifier: BOOL .

    $default  reduce using rule 44 (type_specifier)


state 42

    5 extern_declaration: ';' .

    $default  reduce using rule 5 (extern_declaration)


state 43

    2 program: program extern_declaration .

    $default  reduce using rule 2 (program)


state 44

    3 extern_declaration: function_definition .

    $default  reduce using rule 3 (extern_declaration)


state 45

    4 extern_declaration: declaration .

    $default  reduce using rule 4 (extern_declaration)


state 46

    6 function_definition: declaration_specifiers . declarator declaration_list compound_statement
    9 declaration: declaration_specifiers . init_declarator_list ';'

    '*'  shift, and go to state 60

    ';'       reduce using rule 18 (init_declarator)
    ','       reduce using rule 18 (init_declarator)
    $default  reduce using rule 135 (pointer_opt)

    init_declarator_list  go to state 61
    init_declarator       go to state 62
    declarator            go to state 63
    pointer_opt           go to state 64
    pointer               go to state 65


state 47

   10 declaration_specifiers: declaration_specifier .
   11                       | declaration_specifier . declaration_specifiers
